syntax = "proto3";

import "Protos/common/enums.proto";
import "Protos/coupon.proto";
import "Protos/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
 
package Coupon.API;

option csharp_namespace = "Coupon.API.Protos";
 
 
service CouponSortService {
	rpc GetRecommendedCoupons(RecommendedCouponSearchRequest) returns (RecommendedCouponResponse){
        option (google.api.http) = {
            post: "/sort/v3/provider"
            body: "*"
        };
    }
}
 
message RecommendedCouponSearchRequest {
    string UserSessionToken = 1;
     int32 PageIndex = 2;
    int32 NumPageRecords =3; 
     string CategoryName = 4;
     SortByType SortBy = 5;
     SortOrderType SortOrder = 6;
    CouponApplicationMode FilterType = 7;
    OfferSourceType OfferSourceType = 8;
     MixMode MixMode = 9;
    repeated  string Categories = 10;
    repeated string Brands = 11;
}
 
message RecommendedCouponResponse {
     repeated BaseCoupon Coupons = 1;
     repeated CouponCategory Category = 2;
     repeated CouponBrand Brands = 3;
     CouponPagination PaginationInfo = 4;
}